feat: fatto header

--- a/index.html
+++ b/index.html
@@ -4,18 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolando</title>
+    <!-- Link FontAwesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+     <!-- Link CSS-->
     <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
 
+     <!-- Header -->
     <header>
-        
+     <div class="container flex">
+        <div class="navbar flex">
+            <div class="categories">
+                <a href="">Donna</a>
+                <a href="">Uomo</a>
+                <a href="">Bambini</a>
+            </div>
+            <img src="./imgs/boolean-logo.png" alt="Logo Boolean" class="logo-boolean">
+            <div class="icons-header">
+                <i class="fa-regular fa-user"></i>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-bag-shopping"></i>
+            </div>
+        </div>
+     </div>
     </header>
 
+    <!-- Main -->
     <main>
 
     </main>
 
+    <!-- Footer -->
     <footer>
 
     </footer>
