--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
 
     <!-- Main -->
     <main>
-
+        <div class="container flex">
+         <div class="cards flex">
+            <div class="card"><img src="./imgs/1.webp"></div>
+            <div class="card"><img src="./imgs/2.webp"></div>
+            <div class="card"><img src="./imgs/3.webp"></div>
+            <div class="card"><img src="./imgs/4.webp"></div>
+            <div class="card"><img src="./imgs/5.webp"></div>
+            <div class="card"><img src="./imgs/6.webp"></div>
+         </div>
+        </div>
     </main>
 
     <!-- Footer -->
