feat: inserisco cards description

--- a/index.html
+++ b/index.html
@@ -1,46 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolando</title>
     <!-- Link FontAwesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-     <!-- Link CSS-->
+    <!-- Link CSS-->
     <link rel="stylesheet" href="/styles/styles.css">
 </head>
+
 <body>
 
-     <!-- Header -->
+    <!-- Header -->
     <header>
-     <div class="container flex">
-        <div class="navbar flex">
-            <div class="categories">
-                <a href="">Donna</a>
-                <a href="">Uomo</a>
-                <a href="">Bambini</a>
-            </div>
-            <img src="./imgs/boolean-logo.png" alt="Logo Boolean" class="logo-boolean">
-            <div class="icons-header">
-                <i class="fa-regular fa-user"></i>
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-solid fa-bag-shopping"></i>
+        <div class="container flex">
+            <div class="navbar flex">
+                <div class="categories">
+                    <a href="">Donna</a>
+                    <a href="">Uomo</a>
+                    <a href="">Bambini</a>
+                </div>
+                <img src="./imgs/boolean-logo.png" alt="Logo Boolean" class="logo-boolean">
+                <div class="icons-header">
+                    <i class="fa-regular fa-user"></i>
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-solid fa-bag-shopping"></i>
+                </div>
             </div>
         </div>
-     </div>
     </header>
 
     <!-- Main -->
     <main>
         <div class="container flex">
-         <div class="cards flex">
-            <div class="card"><img src="./imgs/1.webp"></div>
-            <div class="card"><img src="./imgs/2.webp"></div>
-            <div class="card"><img src="./imgs/3.webp"></div>
-            <div class="card"><img src="./imgs/4.webp"></div>
-            <div class="card"><img src="./imgs/5.webp"></div>
-            <div class="card"><img src="./imgs/6.webp"></div>
-         </div>
+            <div class="cards flex">
+                <div class="card"><img src="./imgs/1.webp">
+                    <div class="card-description">
+                        <p>Levi's</p>
+                        <p><strong>RELAXED FIT TEE UNISEX</strong></p>
+                        <span>14,99 &euro; </span><span>29,99 &euro;</span>
+                    </div>
+                </div>
+                <div class="card"><img src="./imgs/2.webp">
+                <div class="card-description">
+                        <p>Guess</p>
+                        <p><strong>ROSES TEE</strong></p>
+                        <span>20,99 &euro; </span><span>29,99 &euro;</span>
+                    </div>
+                </div>
+                <div class="card"><img src="./imgs/3.webp">
+                <div class="card-description">
+                        <p>Come Zucchero Filato</p>
+                        <p><strong>VOGLIA DI COLORI PASTELLO</strong></p>
+                        <span>129,99 &euro; </span><span>184,99 &euro;</span>
+                    </div>
+                </div>
+                <div class="card"><img src="./imgs/4.webp">
+                <div class="card-description">
+                        <p>Levi's</p>
+                        <p><strong>TEE UNISEX</strong></p>
+                        <span>14,99&euro; </span><span>29,99&euro;</span>
+                    </div>
+                </div>
+                <div class="card"><img src="./imgs/5.webp">
+                <div class="card-description">
+                        <p>Maya Deluxe</p>
+                        <p><strong>STRIPE BODICE</strong></p>
+                        <span>99,99 &euro;</span>
+                    </div>
+                </div>
+                <div class="card"><img src="./imgs/6.webp">
+                <div class="card-description">
+                        <p>Esprit</p>
+                        <p><strong>MAGLIONE</strong></p>
+                        <span>29,99 &euro;</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
@@ -48,6 +86,7 @@
     <footer>
 
     </footer>
-    
+
 </body>
+
 </html>
