--- a/index.html
+++ b/index.html
@@ -36,48 +36,103 @@
     <main>
         <div class="container flex">
             <div class="cards flex">
-                <div class="card"><img src="./imgs/1.webp">
+
+                <!-- Prima card -->
+                <div class="card">
+                    <img src="./imgs/1.webp">
                     <div class="card-description">
                         <p>Levi's</p>
                         <p><strong>RELAXED FIT TEE UNISEX</strong></p>
                         <span class="color-red">14,99 &euro; </span><span><s>29,99 &euro;</s></span>
                     </div>
+                    <div class="discount-label">
+                        30%
+                    </div>
+                    <div class="cuore">
+                        <p>&hearts;</p>
+                    </div>
                 </div>
-                <div class="card"><img src="./imgs/2.webp">
-                <div class="card-description">
+
+                <!-- Seconda card -->
+                <div class="card">
+                    <img src="./imgs/2.webp">
+                    <div class="card-description">
                         <p>Guess</p>
                         <p><strong>ROSES TEE</strong></p>
                         <span class="color-red">20,99 &euro; </span><span><s>29,99 &euro;</s></span>
                     </div>
+                    <div class="discount-label ">
+                        30%
+                    </div>
+                    <div class="cuore">
+                        <p>&hearts;</p>
+                    </div>
                 </div>
-                <div class="card"><img src="./imgs/3.webp">
-                <div class="card-description">
+
+                <!-- Terza card -->
+                <div class="card">
+                    <img src="./imgs/3.webp">
+                    <div class="card-description">
                         <p>Come Zucchero Filato</p>
                         <p><strong>VOGLIA DI COLORI PASTELLO</strong></p>
                         <span class="color-red">129,99 &euro; </span><span><s>184,99 &euro;</s></span>
                     </div>
+                    <div class="discount-label ">
+                        30%
+                    </div>
+                    <div class="cuore">
+                        <p>&hearts;</p>
+                    </div>
                 </div>
-                <div class="card"><img src="./imgs/4.webp">
-                <div class="card-description">
+
+                <!-- Quarta card -->
+                <div class="card">
+                    <img src="./imgs/4.webp">
+                    <div class="card-description">
                         <p>Levi's</p>
                         <p><strong>TEE UNISEX</strong></p>
                         <span class="color-red">14,99&euro; </span><span><s>29,99&euro;</s></span>
                     </div>
+                    <div class="discount-label ">
+                        30%
+                    </div>
+                    <div class="cuore">
+                        <p>&hearts;</p>
+                    </div>
                 </div>
-                <div class="card"><img src="./imgs/5.webp">
-                <div class="card-description">
+
+                <!-- Quinta card -->
+                <div class="card">
+                    <img src="./imgs/5.webp">
+                    <div class="card-description">
                         <p>Maya Deluxe</p>
                         <p><strong>STRIPE BODICE</strong></p>
                         <span class="color-red">99,99 &euro;</span>
                     </div>
+                    <div class="discount-label ">
+                        30%
+                    </div>
+                    <div class="cuore">
+                        <p>&hearts;</p>
+                    </div>
                 </div>
-                <div class="card"><img src="./imgs/6.webp">
-                <div class="card-description">
+
+                <!-- Sesta card -->
+                <div class="card">
+                    <img src="./imgs/6.webp">
+                    <div class="card-description">
                         <p>Esprit</p>
                         <p><strong>MAGLIONE</strong></p>
                         <span class="color-red">29,99 &euro;</span>
                     </div>
+                    <div class="discount-label ">
+                        30%
+                    </div>
+                    <div class="cuore">
+                        <p>&hearts;</p>
+                    </div>
                 </div>
+
             </div>
         </div>
     </main>
