aggiungo img hover

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
     <meta charset="UTF-8">
@@ -39,14 +39,18 @@
 
                 <!-- Prima card -->
                 <div class="card">
-                    <img src="./imgs/1.webp">
+                    <img src="./imgs/1.webp" class="nohover-img">
+                    <img src="./imgs/1b.webp" class="hover-img">
                     <div class="card-description">
                         <p>Levi's</p>
                         <p><strong>RELAXED FIT TEE UNISEX</strong></p>
                         <span class="color-red">14,99 &euro; </span><span><s>29,99 &euro;</s></span>
                     </div>
                     <div class="discount-label">
-                        30%
+                        -50%
+                    </div>
+                    <div class="sostenibilita-label">
+                        Sostenibilità
                     </div>
                     <div class="cuore">
                         <p>&hearts;</p>
@@ -55,14 +59,15 @@
 
                 <!-- Seconda card -->
                 <div class="card">
-                    <img src="./imgs/2.webp">
+                    <img src="./imgs/2.webp" class="nohover-img">
+                    <img src="./imgs/2b.webp" class="hover-img">
                     <div class="card-description">
                         <p>Guess</p>
                         <p><strong>ROSES TEE</strong></p>
                         <span class="color-red">20,99 &euro; </span><span><s>29,99 &euro;</s></span>
                     </div>
-                    <div class="discount-label ">
-                        30%
+                    <div class="discount-label">
+                        -30%
                     </div>
                     <div class="cuore">
                         <p>&hearts;</p>
@@ -71,14 +76,15 @@
 
                 <!-- Terza card -->
                 <div class="card">
-                    <img src="./imgs/3.webp">
+                    <img src="./imgs/3.webp" class="nohover-img">
+                    <img src="./imgs/3b.webp" class="hover-img">
                     <div class="card-description">
                         <p>Come Zucchero Filato</p>
                         <p><strong>VOGLIA DI COLORI PASTELLO</strong></p>
                         <span class="color-red">129,99 &euro; </span><span><s>184,99 &euro;</s></span>
                     </div>
-                    <div class="discount-label ">
-                        30%
+                    <div class="discount-label">
+                        -30%
                     </div>
                     <div class="cuore">
                         <p>&hearts;</p>
@@ -87,14 +93,18 @@
 
                 <!-- Quarta card -->
                 <div class="card">
-                    <img src="./imgs/4.webp">
+                    <img src="./imgs/4.webp" class="nohover-img">
+                    <img src="./imgs/4b.webp" class="hover-img">
                     <div class="card-description">
                         <p>Levi's</p>
                         <p><strong>TEE UNISEX</strong></p>
                         <span class="color-red">14,99&euro; </span><span><s>29,99&euro;</s></span>
                     </div>
-                    <div class="discount-label ">
-                        30%
+                    <div class="discount-label">
+                        -50%
+                    </div>
+                    <div class="sostenibilita-label">
+                        Sostenibilità
                     </div>
                     <div class="cuore">
                         <p>&hearts;</p>
@@ -103,14 +113,12 @@
 
                 <!-- Quinta card -->
                 <div class="card">
-                    <img src="./imgs/5.webp">
+                    <img src="./imgs/5.webp" class="nohover-img">
+                    <img src="./imgs/5b.webp" class="hover-img">
                     <div class="card-description">
                         <p>Maya Deluxe</p>
                         <p><strong>STRIPE BODICE</strong></p>
                         <span class="color-red">99,99 &euro;</span>
-                    </div>
-                    <div class="discount-label ">
-                        30%
                     </div>
                     <div class="cuore">
                         <p>&hearts;</p>
@@ -119,14 +127,15 @@
 
                 <!-- Sesta card -->
                 <div class="card">
-                    <img src="./imgs/6.webp">
+                    <img src="./imgs/6.webp" class="nohover-img">
+                    <img src="./imgs/6b.webp" class="hover-img">
                     <div class="card-description">
                         <p>Esprit</p>
                         <p><strong>MAGLIONE</strong></p>
                         <span class="color-red">29,99 &euro;</span>
                     </div>
-                    <div class="discount-label ">
-                        30%
+                    <div class="sostenibilita-single-label">
+                        Sostenibilità
                     </div>
                     <div class="cuore">
                         <p>&hearts;</p>
