--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
                 <!-- Sesta card -->
                 <div class="card">
-                    
+
                     <div class="card-img-and-label">
                         <img src="./imgs/6.webp" class="nohover-img">
                         <img src="./imgs/6b.webp" class="hover-img">
@@ -178,6 +178,25 @@
 
     <!-- Footer -->
     <footer>
+
+         <div class="container flex">
+            <div class="navbar-contatti flex">
+                <div class="info-boolando">
+                    <h3>Boolando s.r.l</h3>
+                    <a href="">Informazioni legali</a>
+                    <a href="">Normativa sulla privacy</a>
+                    <a href="">Diritto di recesso</a>
+                </div>
+                 <div class="social-boolando">
+                    <h4>Trovaci anche su</h4>
+                    <i class="fa-brands fa-square-twitter"></i>
+                    <i class="fa-brands fa-square-facebook"></i>
+                    <i class="fa-brands fa-square-instagram"></i>
+                    <i class="fa-brands fa-square-pinterest"></i>
+                    <i class="fa-brands fa-square-youtube"></i>
+                </div>
+            </div>
+        </div>
 
     </footer>
 
