--- a/index.html
+++ b/index.html
@@ -34,152 +34,150 @@
 
     <!-- Main -->
     <main>
-        <div class="container flex">
-            <section class="cards flex">
+        <section class="container cards flex">
 
-                <!-- Prima card -->
-                <div class="card">
+            <!-- Prima card -->
+            <div class="card">
 
-                    <div class="card-img-and-label">
-                        <img src="./imgs/1.webp" class="nohover-img">
-                        <img src="./imgs/1b.webp" class="hover-img">
-                        <div class="discount-label">
-                            -50%
-                        </div>
-                        <div class="sostenibilita-label">
-                            Sostenibilità
-                        </div>
-                        <div class="cuore">
-                            <p>&hearts;</p>
-                        </div>
+                <div class="card-img-and-label">
+                    <img src="./imgs/1.webp" class="nohover-img">
+                    <img src="./imgs/1b.webp" class="hover-img">
+                    <div class="discount-label">
+                        -50%
                     </div>
-
-                    <div class="card-description">
-                        <p>Levi's</p>
-                        <p><strong>RELAXED FIT TEE UNISEX</strong></p>
-                        <span class="color-red">14,99 &euro; </span><span><s>29,99 &euro;</s></span>
+                    <div class="sostenibilita-label">
+                        Sostenibilità
                     </div>
-
+                    <div class="cuore">
+                        <p>&hearts;</p>
+                    </div>
                 </div>
 
-                <!-- Seconda card -->
-                <div class="card">
-
-                    <div class="card-img-and-label">
-                        <img src="./imgs/2.webp" class="nohover-img">
-                        <img src="./imgs/2b.webp" class="hover-img">
-                        <div class="discount-label">
-                            -30%
-                        </div>
-                        <div class="cuore">
-                            <p>&hearts;</p>
-                        </div>
-                    </div>
-
-                    <div class="card-description">
-                        <p>Guess</p>
-                        <p><strong>ROSES TEE</strong></p>
-                        <span class="color-red">20,99 &euro; </span><span><s>29,99 &euro;</s></span>
-                    </div>
-
+                <div class="card-description">
+                    <p>Levi's</p>
+                    <p><strong>RELAXED FIT TEE UNISEX</strong></p>
+                    <span class="color-red">14,99 &euro; </span><span><s>29,99 &euro;</s></span>
                 </div>
 
-                <!-- Terza card -->
-                <div class="card">
+            </div>
 
-                    <div class="card-img-and-label">
-                        <img src="./imgs/3.webp" class="nohover-img">
-                        <img src="./imgs/3b.webp" class="hover-img">
-                        <div class="discount-label">
-                            -30%
-                        </div>
-                        <div class="cuore">
-                            <p>&hearts;</p>
-                        </div>
+            <!-- Seconda card -->
+            <div class="card">
+
+                <div class="card-img-and-label">
+                    <img src="./imgs/2.webp" class="nohover-img">
+                    <img src="./imgs/2b.webp" class="hover-img">
+                    <div class="discount-label">
+                        -30%
                     </div>
-
-                    <div class="card-description">
-                        <p>Come Zucchero Filato</p>
-                        <p><strong>VOGLIA DI COLORI PASTELLO</strong></p>
-                        <span class="color-red">129,99 &euro; </span><span><s>184,99 &euro;</s></span>
+                    <div class="cuore">
+                        <p>&hearts;</p>
                     </div>
-
                 </div>
 
-                <!-- Quarta card -->
-                <div class="card">
-
-                    <div class="card-img-and-label">
-                        <img src="./imgs/4.webp" class="nohover-img">
-                        <img src="./imgs/4b.webp" class="hover-img">
-                        <div class="discount-label">
-                            -50%
-                        </div>
-                        <div class="sostenibilita-label">
-                            Sostenibilità
-                        </div>
-                        <div class="cuore">
-                            <p>&hearts;</p>
-                        </div>
-                    </div>
-
-                    <div class="card-description">
-                        <p>Levi's</p>
-                        <p><strong>TEE UNISEX</strong></p>
-                        <span class="color-red">14,99&euro; </span><span><s>29,99&euro;</s></span>
-                    </div>
-
+                <div class="card-description">
+                    <p>Guess</p>
+                    <p><strong>ROSES TEE</strong></p>
+                    <span class="color-red">20,99 &euro; </span><span><s>29,99 &euro;</s></span>
                 </div>
 
-                <!-- Quinta card -->
-                <div class="card">
+            </div>
 
-                    <div class="card-img-and-label">
-                        <img src="./imgs/5.webp" class="nohover-img">
-                        <img src="./imgs/5b.webp" class="hover-img">
-                        <div class="cuore">
-                            <p>&hearts;</p>
-                        </div>
+            <!-- Terza card -->
+            <div class="card">
+
+                <div class="card-img-and-label">
+                    <img src="./imgs/3.webp" class="nohover-img">
+                    <img src="./imgs/3b.webp" class="hover-img">
+                    <div class="discount-label">
+                        -30%
                     </div>
-
-                    <div class="card-description">
-                        <p>Maya Deluxe</p>
-                        <p><strong>STRIPE BODICE</strong></p>
-                        <span class="color-red">99,99 &euro;</span>
+                    <div class="cuore">
+                        <p>&hearts;</p>
                     </div>
-
                 </div>
 
-                <!-- Sesta card -->
-                <div class="card">
-
-                    <div class="card-img-and-label">
-                        <img src="./imgs/6.webp" class="nohover-img">
-                        <img src="./imgs/6b.webp" class="hover-img">
-                        <div class="sostenibilita-single-label">
-                            Sostenibilità
-                        </div>
-                        <div class="cuore">
-                            <p>&hearts;</p>
-                        </div>
-                    </div>
-
-                    <div class="card-description">
-                        <p>Esprit</p>
-                        <p><strong>MAGLIONE</strong></p>
-                        <span class="color-red">29,99 &euro;</span>
-                    </div>
-
+                <div class="card-description">
+                    <p>Come Zucchero Filato</p>
+                    <p><strong>VOGLIA DI COLORI PASTELLO</strong></p>
+                    <span class="color-red">129,99 &euro; </span><span><s>184,99 &euro;</s></span>
                 </div>
 
-            </section>
-        </div>
+            </div>
+
+            <!-- Quarta card -->
+            <div class="card">
+
+                <div class="card-img-and-label">
+                    <img src="./imgs/4.webp" class="nohover-img">
+                    <img src="./imgs/4b.webp" class="hover-img">
+                    <div class="discount-label">
+                        -50%
+                    </div>
+                    <div class="sostenibilita-label">
+                        Sostenibilità
+                    </div>
+                    <div class="cuore">
+                        <p>&hearts;</p>
+                    </div>
+                </div>
+
+                <div class="card-description">
+                    <p>Levi's</p>
+                    <p><strong>TEE UNISEX</strong></p>
+                    <span class="color-red">14,99&euro; </span><span><s>29,99&euro;</s></span>
+                </div>
+
+            </div>
+
+            <!-- Quinta card -->
+            <div class="card">
+
+                <div class="card-img-and-label">
+                    <img src="./imgs/5.webp" class="nohover-img">
+                    <img src="./imgs/5b.webp" class="hover-img">
+                    <div class="cuore">
+                        <p>&hearts;</p>
+                    </div>
+                </div>
+
+                <div class="card-description">
+                    <p>Maya Deluxe</p>
+                    <p><strong>STRIPE BODICE</strong></p>
+                    <span class="color-red">99,99 &euro;</span>
+                </div>
+
+            </div>
+
+            <!-- Sesta card -->
+            <div class="card">
+
+                <div class="card-img-and-label">
+                    <img src="./imgs/6.webp" class="nohover-img">
+                    <img src="./imgs/6b.webp" class="hover-img">
+                    <div class="sostenibilita-single-label">
+                        Sostenibilità
+                    </div>
+                    <div class="cuore">
+                        <p>&hearts;</p>
+                    </div>
+                </div>
+
+                <div class="card-description">
+                    <p>Esprit</p>
+                    <p><strong>MAGLIONE</strong></p>
+                    <span class="color-red">29,99 &euro;</span>
+                </div>
+
+            </div>
+
+        </section>
     </main>
 
     <!-- Footer -->
     <footer>
 
-         <div class="container flex">
+        <div class="container flex">
             <div class="navbar-contatti flex">
                 <div class="info-boolando">
                     <h3>Boolando s.r.l</h3>
@@ -187,7 +185,7 @@
                     <a href="">Normativa sulla privacy</a>
                     <a href="">Diritto di recesso</a>
                 </div>
-                 <div class="social-boolando">
+                <div class="social-boolando">
                     <h4>Trovaci anche su</h4>
                     <i class="fa-brands fa-square-twitter"></i>
                     <i class="fa-brands fa-square-facebook"></i>
