aggiungo gap footer

--- a/index.html
+++ b/index.html
@@ -181,9 +181,11 @@
             <div class="navbar-contatti flex">
                 <div class="info-boolando">
                     <h3>Boolando s.r.l</h3>
-                    <a href="">Informazioni legali</a>
-                    <a href="">Normativa sulla privacy</a>
-                    <a href="">Diritto di recesso</a>
+                    <div class="a-footer flex">
+                        <a href="">Informazioni legali</a>
+                        <a href="">Normativa sulla privacy</a>
+                        <a href="">Diritto di recesso</a>
+                    </div>
                 </div>
                 <div class="social-boolando">
                     <h4>Trovaci anche su</h4>
