--- a/index.html
+++ b/index.html
@@ -42,11 +42,9 @@
                 <div class="card-img-and-label">
                     <img src="./imgs/1.webp" class="nohover-img">
                     <img src="./imgs/1b.webp" class="hover-img">
-                    <div class="discount-label">
-                        -50%
-                    </div>
-                    <div class="sostenibilita-label">
-                        Sostenibilità
+                    <div class="label flex">
+                        <div class="discount-label">-50%</div>
+                        <div class="sostenibilita-label">Sostenibilità</div>
                     </div>
                     <div class="cuore">
                         <p>&hearts;</p>
@@ -67,8 +65,8 @@
                 <div class="card-img-and-label">
                     <img src="./imgs/2.webp" class="nohover-img">
                     <img src="./imgs/2b.webp" class="hover-img">
-                    <div class="discount-label">
-                        -30%
+                    <div class="label">
+                        <div class="discount-label">-30%</div>
                     </div>
                     <div class="cuore">
                         <p>&hearts;</p>
@@ -89,8 +87,8 @@
                 <div class="card-img-and-label">
                     <img src="./imgs/3.webp" class="nohover-img">
                     <img src="./imgs/3b.webp" class="hover-img">
-                    <div class="discount-label">
-                        -30%
+                    <div class="label">
+                    <div class="discount-label">-30%</div>
                     </div>
                     <div class="cuore">
                         <p>&hearts;</p>
@@ -111,11 +109,9 @@
                 <div class="card-img-and-label">
                     <img src="./imgs/4.webp" class="nohover-img">
                     <img src="./imgs/4b.webp" class="hover-img">
-                    <div class="discount-label">
-                        -50%
-                    </div>
-                    <div class="sostenibilita-label">
-                        Sostenibilità
+                    <div class="label flex">
+                    <div class="discount-label">-50%</div>
+                    <div class="sostenibilita-label">Sostenibilità</div>
                     </div>
                     <div class="cuore">
                         <p>&hearts;</p>
@@ -155,8 +151,8 @@
                 <div class="card-img-and-label">
                     <img src="./imgs/6.webp" class="nohover-img">
                     <img src="./imgs/6b.webp" class="hover-img">
-                    <div class="sostenibilita-single-label">
-                        Sostenibilità
+                    <div class="label">
+                    <div class="sostenibilita-label">Sostenibilità</div>
                     </div>
                     <div class="cuore">
                         <p>&hearts;</p>
